tests/integration/snapshots/check/mutable_variable_can_be_immutable/test_check_mutable_variable_can_be_immutable_with_call_of_unresolved_method.txt
error[C001]: method `some` not found
  --> [ROOT]/contracts/main[LINE]
  |
6 |                 a.some();
  |                   ^^^^


Use acton check --explain <CODE> to get detailed explanation of a rule.
For example: acton check --explain C001
